# EasyCL

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  COPYING  EasyCL.hpp  README.md  README.txt  install.sh  kernel.cl  main.cpp  make.sh  test  uninstall.sh
example/: debug.sh  kernel.cl  main.cpp  make.sh
example/SIMD/: debug.sh  main.cpp  make.sh
example/SingleThread/: kernel.cl  main.cpp
example/Struct/: debug.sh  kernel.cl  main.cpp
examples/: CMakeLists.txt  SIMD.cpp  buffer.cpp  program.cl  single.cpp
examples/kernels/: SIMD.cl  single.cl  struct.cl  vectors.cl
examples/src/: ExamplePass.cpp  ExampleSIMD.cpp  ExampleSingleThread.cpp  ExampleStruct.cpp  ExampleVectors.cpp  SIMD.cpp  pass.cpp  single.cpp  struct.cpp  vectors.cpp
include/: EasyCL.hpp
include/EasyCL/: EasyCL.hpp
src/: argument.cpp  argument.hpp  easycl.cpp  easycl.hpp  error.cpp  error.hpp  gpu.cpp  gpu.hpp  kernel.cpp  kernel.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp
test/: argument.cpp  make.sh
tests/: Array.cpp  Buffer.cpp  CMakeLists.txt  Program.cpp  Thread.cpp  Variable.cpp  var.cpp
tests/src/: ArgumentBase.cpp  Array.cpp  Buffer.cpp  TestArgumentBase.cpp  TestArray.cpp  TestComputer.cpp  TestError.cpp  TestKernel.cpp  TestOperators.cpp  TestPlatform.cpp  TestVariable.cpp
